--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -273,12 +273,12 @@ To improve repository performance Rancher is introducing a lifecycle management 
 
 // Apply same headers as "Major Bug Fixes" but with "Long-standing Known Issues" suffix instead
 
-== Long-standing Known Issues - Rancher General
+=== Long-standing Known Issues - Rancher General
 
 * *Rancher v2.12.2:*
 ** The https://scc.suse.com/home[SUSE Customer Center (SCC)] system view has a known issue being investigated regarding duplicate Rancher Manager registrations. See https://github.com/rancher/scc-operator/issues/38[rancher/scc-operator #38].
 
-== Long-standing Known Issues - Cluster Provisioning
+=== Long-standing Known Issues - Cluster Provisioning
 
 * Not all cluster tools can be installed on a hardened cluster.
 // no issue number available
@@ -290,7 +290,7 @@ To improve repository performance Rancher is introducing a lifecycle management 
 * *Rancher v2.7.2:*
 ** If you upgrade or update any hosted cluster, and go to *Cluster Management > Clusters* while the cluster is still provisioning, the *Registration* tab is visible. Registering a cluster that is already registered with Rancher can cause data corruption. See https://github.com/rancher/dashboard/issues/8524[#8524].
 
-== Long-standing Known Issues - RKE2 Provisioning
+=== Long-standing Known Issues - RKE2 Provisioning
 // hostbusters
 
 * *Rancher v2.7.7:*
@@ -298,7 +298,7 @@ To improve repository performance Rancher is introducing a lifecycle management 
 * *Rancher v2.7.6:*
 ** Provisioning RKE2/K3s clusters with added (not built-in) custom node drivers causes provisioning to fail. As a workaround, https://github.com/rancher/rancher/issues/37074#issuecomment-1664722305[fix] the added node drivers after activating. See https://github.com/rancher/rancher/issues/37074[#37074].
 
-== Long-standing Known Issues - K3s Provisioning
+=== Long-standing Known Issues - K3s Provisioning
 // hostbusters
 
 * *Rancher v2.7.6:*
@@ -306,7 +306,7 @@ To improve repository performance Rancher is introducing a lifecycle management 
 * *Rancher v2.7.2:*
 ** Clusters remain in an `Updating` state even when they contain nodes in an `Error` state. See https://github.com/rancher/rancher/issues/39164[#39164].
 
-== Long-standing Known Issues - Rancher App (Global UI)
+=== Long-standing Known Issues - Rancher App (Global UI)
 
 * *Rancher v2.12.1:*
 ** When a standard user with the Cluster Owner role attempts to edit an Azure or AKS cluster, the Machine Pools section shows an error `Cannot read properties of undefined...`. As a workaround, standard users must manually add their cloud credentials to create, edit, and manage Azure or AKS clusters. See https://github.com/rancher/dashboard/issues/15241[#15241].
@@ -317,18 +317,18 @@ To improve repository performance Rancher is introducing a lifecycle management 
 * *Rancher v2.7.7:*
 ** When creating a cluster in the Rancher UI it does not allow the use of an underscore `_` in the `Cluster Name` field. See https://github.com/rancher/dashboard/issues/9416[#9416].
 
-== Long-standing Known Issues - Hosted Rancher
+=== Long-standing Known Issues - Hosted Rancher
 // hostbusters
 
 * *Rancher v2.7.5:*
 ** The *Cluster* page shows the *Registration* tab when updating or upgrading a hosted cluster. See https://github.com/rancher/dashboard/issues/8524[#8524].
 
-== Long-standing Known Issues - EKS
+=== Long-standing Known Issues - EKS
 
 * *Rancher v2.7.0:*
 ** EKS clusters on Kubernetes v1.21 or below on Rancher v2.7 cannot be upgraded. See https://github.com/rancher/rancher/issues/39392[#39392].
 
-== Long-standing Known Issues - Authentication
+=== Long-standing Known Issues - Authentication
 // night's watch
 
 * *Rancher v2.9.0:*
@@ -337,19 +337,19 @@ To improve repository performance Rancher is introducing a lifecycle management 
 *** When the generic OIDC auth provider is enabled, auth provider users that are added to a cluster/project by their username are not able to access resources upon logging in. A user will only have access to resources upon login if the user is added by their userID.  See https://github.com/rancher/rancher/issues/46105[#46105].
 *** When the generic OIDC auth provider is enabled and an auth provider user in a nested group is logged into Rancher, the user will see the following error when they attempt to create a Project: `http://projectroletemplatebindings.management.cattle.io/[projectroletemplatebindings.management.cattle.io] is forbidden: User "u-gcxatwsnku" cannot create resource "projectroletemplatebindings" in API group "http://management.cattle.io/[management.cattle.io]" in the namespace "p-9t5pg"`. However, the project is still created. See https://github.com/rancher/rancher/issues/46106[#46106].
 
-== Long-standing Known Issues - Rancher Webhook
+=== Long-standing Known Issues - Rancher Webhook
 // neo
 
 * *Rancher v2.7.2:*
 ** A webhook is installed in all downstream clusters. There are several issues that users may encounter with this functionality:
 *** If you rollback from a version of Rancher v2.7.2 or later, to a Rancher version earlier than v2.7.2, the webhooks will remain in downstream clusters. Since the webhook is designed to be 1:1 compatible with specific versions of Rancher, this can cause unexpected behaviors to occur downstream. The Rancher team has developed a https://github.com/rancher/webhook/wiki/Remove-Webhook-from-downstream-clusters[script] which should be used after rollback is complete (meaning after a Rancher version earlier than v2.7.2 is running). This removes the webhook from affected downstream clusters. See https://github.com/rancher/rancher/issues/40816[#40816].
 
-== Long-standing Known Issues - Virtualization Management (Harvester)
+=== Long-standing Known Issues - Virtualization Management (Harvester)
 
 * *Rancher v2.7.2:*
 ** If you're using Rancher v2.7.2 with Harvester v1.1.1 clusters, you won't be able to select the Harvester cloud provider when deploying or updating guest clusters. The https://github.com/harvester/release-notes/blob/main/v1.1.2.md#important-information-about-rancher-support[Harvester release notes] contain instructions on how to resolve this. See https://github.com/harvester/harvester/issues/3750[#3750].
 
-== Long-standing Known Issues - Backup/Restore
+=== Long-standing Known Issues - Backup/Restore
 // night's watch
 
 * When migrating to a cluster with the Rancher Backup feature, the server-url cannot be changed to a different location. It must continue to use the same URL.
