--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/best-practices/tuning-etcd-for-large-installs.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/best-practices/tuning-etcd-for-large-installs.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-09-29
+:revdate: 2026-01-06
 :page-revdate: {revdate}
 
 When Rancher is used to manage xref:installation-and-upgrade/requirements/requirements.adoc[a large infrastructure] it is recommended to increase the default keyspace for etcd from the default 2 GB. The maximum setting is 8 GB and the host should have enough RAM to keep the entire dataset in memory. When increasing this value you should also increase the size of the host. The keyspace size can also be adjusted in smaller installations if you anticipate a high rate of change of pods during the garbage collection interval.
@@ -12,13 +12,10 @@ The etcd data set is automatically cleaned up on a five-minute interval by Kuber
 == Example: This Snippet of the RKE2/K3s config.yaml file Increases the Keyspace Size to 5GB
 
 [,yaml]
+.RKE2/K3s config.yaml
 ----
-# RKE2/K3s config.yaml
----
-services:
-  etcd:
-    extra_args:
-      quota-backend-bytes: 5368709120
+etcd-arg:
+  - "quota-backend-bytes=5368709120"
 ----
 
 == Scaling etcd Disk Performance
@@ -30,15 +27,9 @@ Additionally, to reduce IO contention on the disks for etcd, you can use a dedic
 To implement this solution in an RKE2/K3s cluster, the `/var/lib/etcd/data` and `/var/lib/etcd/wal` directories will need to have disks mounted and formatted on the underlying host. In the `extra_args` directive of the `etcd` service, you must include the `wal_dir` directory. Without specifying the `wal_dir`, etcd process will try to manipulate the underlying `wal` mount with insufficient permissions.
 
 [,yaml]
+.RKE2/K3s config.yaml
 ----
-# RKE2/K3s config.yaml
----
-services:
-  etcd:
-    extra_args:
-      data-dir: '/var/lib/rancher/etcd/data/'
-      wal-dir: '/var/lib/rancher/etcd/wal/wal_dir'
-    extra_binds:
-      - '/var/lib/etcd/data:/var/lib/rancher/etcd/data'
-      - '/var/lib/etcd/wal:/var/lib/rancher/etcd/wal'
+etcd-arg:
+  - "data-dir=/var/lib/etcd/data"
+  - "wal-dir=/var/lib/etcd/wal"
 ----
