--- a/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/configure-generic-oidc.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2026-01-13
 :page-revdate: {revdate}
 :description: Create an OpenID Connect (OIDC) client and configure Rancher to work with your authentication provider. Your users can then sign into Rancher using their login from the authentication provider.
 
@@ -41,7 +41,7 @@ Consult the documentation for your specific IdP to complete the listed prerequis
 | `+https://yourRancherHostURL/verify-auth+`
 |===
 
- ** In the new OIDC client, create mappers to expose the users fields.
+ ** In the new OIDC client, create mappers to expose the user's fields.
 
 [NOTE]
 ====
