--- a/versions/v2.11/modules/zh/pages/release-notes/v2.11.9.adoc
+++ b/versions/v2.11/modules/zh/pages/release-notes/v2.11.9.adoc
@@ -18,7 +18,7 @@ For more information on new features in the general minor release see the https:
 
 == Changes Since v2.11.8
 
-See the full list of https://github.com/rancher/rancher/compare/v2.11.8...v2.11.9[changes].
+See the full list of https://github.com/rancher/rancher/compare/v2.11.8%E2%80%A6v2.11.9[changes].
 
 == Install/Upgrade Notes
 
