--- a/versions/v2.12/modules/en/pages/release-notes/v2.12.5.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes/v2.12.5.adoc
@@ -29,7 +29,7 @@ For more information on new features in the general minor release see the https:
 
 == Changes Since v2.12.4
 
-See the full list of https://github.com/rancher/rancher/compare/v2.12.4...v2.12.5[changes].
+See the full list of https://github.com/rancher/rancher/compare/v2.12.4%E2%80%A6v2.12.5[changes].
 
 == Install/Upgrade Notes
 
