--- a/versions/v2.13/modules/en/pages/security/rancher-security-best-practices.adoc
+++ b/versions/v2.13/modules/en/pages/security/rancher-security-best-practices.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-22
+:revdate: 2026-01-15
 :page-revdate: {revdate}
 
 == Restrict Public Access to /version and /rancherversion Path
@@ -27,3 +27,125 @@ You should protect the following ports behind an xref:cluster-admin/kubernetes-r
 * *RKE2:* Port 6443, used by the Kubernetes API, and port 9345, used for node registration.
 
 These ports have TLS SAN certificates which list nodes' public IP addresses. An attacker could use that information to gain unauthorized access or monitor activity on the cluster. Protecting these ports helps mitigate against nodes' public IP addresses being disclosed to potential attackers.
+
+=== Rancher Username Policy
+
+By default, Kubernetes does not provide enforcement mechanisms for baseline username policies. In Rancher, this means that any enforcement of username formats, naming conventions, or baseline policies is expected to be handled by the external identity provider’s policies, if such policies are in place.
+
+In Rancher, `admin` is the default username for the Administrator user, as highlighted xref:installation-and-upgrade/resources/bootstrap-password.adoc[here]
+
+Examples of potential baseline policies include:
+
+* Requiring usernames to follow an organizational convention (e.g.,`firstname.lastname`)
+* Enforcing minimum or maximum length requirements
+* Disallowing certain special characters
+* Preventing impersonation by disallowing reserved names (e.g., `admin`, `root`)
+
+Without these controls at the identity provider layer, there is a risk of inconsistent or insecure username practices, which can complicate access audits and lead to privilege escalation attempts.
+
+[IMPORTANT]
+====
+Rancher currently enforces only a xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc#_minimum_password_length[minimum password length].
+====
+
+*Recommendation:* We strongly advice that customers:
+
+* Review and configure username baseline policies directly in their external identity providers (e.g., LDAP, Active Directory, SAML, or OIDC).
+* Ensure that those policies align with the organization’s security and compliance requirements.
+* Regularly audit user accounts to detect naming inconsistencies or policy violations.
+
+For more information, see:
+
+* https://cheatsheetseries.owasp.org/cheatsheets/Authentication_Cheat_Sheet.html[OWASP Cheat Sheet: Authentication]
+* https://owasp.org/www-project-top-ten/2017/A2_2017-Broken_Authentication[OWASP Identity Management]
+
+=== WAF Rules
+
+Rancher is designed to support a wide range of deployment scenarios, including environments where customers may programmatically automate the creation or provisioning of large numbers of clusters. Imposing strict application-level limits within Rancher itself could interfere with legitimate workloads that require dynamic scaling.
+
+For example:
+
+* CI/CD pipelines may create and tear down clusters frequently.
+* Self-service portals could provision clusters on-demand for developers.
+* Test environments may generate high volumes of API calls.
+
+*Risk:* Without appropriate rate limiting, adversaries could exploit unauthenticated or authenticated endpoints to:
+
+* Exhaust resources (Denial of Service).
+* Inflate storage costs.
+* Degrade performance for legitimate users.
+
+*Recommendation:* The most effective way to mitigate this risk is to implement rate limiting and abuse protection at the infrastructure or Web Application Firewall (WAF) layer. This approach allows thresholds to be tuned for each environment’s expected usage and scaling characteristics. Some examples of controls can be:
+
+* Configuring a Web Application Firewall or API Gateway to enforce rate limits on sensitive operations, such as cluster creation and
+provisioning.
+* Defining thresholds based on baseline workload expectations (e.g., max requests per minute per client).
+* Monitoring logs and alerting on anomalies to detect potential abuse.
+* Apply a resource quota, which is a Rancher feature that limits the resources available to a project or namespace.
+
+For more information, see:
+
+* xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc[Project Resource Quotas]
+* https://owasp.org/API-Security/editions/2023/en/0xa4-lack-of-resources-rate-limiting/[OWASP API Security Top 10 - API4:2019 - Lack of Resources & Rate Limiting]
+* https://cheatsheetseries.owasp.org/cheatsheets/Rate_Limiting_Cheat_Sheet.html[OWASP Cheat Sheet: Rate Limiting]
+
+=== Rancher Username Policy
+
+By default, Kubernetes does not provide enforcement mechanisms for baseline username policies. In Rancher, this means that any enforcement of username formats, naming conventions, or baseline policies is expected to be handled by the external identity provider’s policies, if such policies are in place.
+
+In Rancher, `admin` is the default username for the Administrator user, as highlighted xref:installation-and-upgrade/resources/bootstrap-password.adoc[here]
+
+Examples of potential baseline policies include:
+
+* Requiring usernames to follow an organizational convention (e.g.,`firstname.lastname`)
+* Enforcing minimum or maximum length requirements
+* Disallowing certain special characters
+* Preventing impersonation by disallowing reserved names (e.g., `admin`, `root`)
+
+Without these controls at the identity provider layer, there is a risk of inconsistent or insecure username practices, which can complicate access audits and lead to privilege escalation attempts.
+
+[IMPORTANT]
+====
+Rancher currently enforces only a xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc#_minimum_password_length[minimum password length].
+====
+
+*Recommendation:* We strongly advice that customers:
+
+* Review and configure username baseline policies directly in their external identity providers (e.g., LDAP, Active Directory, SAML, or OIDC).
+* Ensure that those policies align with the organization’s security and compliance requirements.
+* Regularly audit user accounts to detect naming inconsistencies or policy violations.
+
+For more information, see:
+
+* https://cheatsheetseries.owasp.org/cheatsheets/Authentication_Cheat_Sheet.html[OWASP Cheat Sheet: Authentication]
+* https://owasp.org/www-project-top-ten/2017/A2_2017-Broken_Authentication[OWASP Identity Management]
+
+=== WAF Rules
+
+Rancher is designed to support a wide range of deployment scenarios, including environments where customers may programmatically automate the creation or provisioning of large numbers of clusters. Imposing strict application-level limits within Rancher itself could interfere with legitimate workloads that require dynamic scaling.
+
+For example:
+
+* CI/CD pipelines may create and tear down clusters frequently.
+* Self-service portals could provision clusters on-demand for developers.
+* Test environments may generate high volumes of API calls.
+
+*Risk:* Without appropriate rate limiting, adversaries could exploit unauthenticated or authenticated endpoints to:
+
+* Exhaust resources (Denial of Service).
+* Inflate storage costs.
+* Degrade performance for legitimate users.
+
+*Recommendation:* The most effective way to mitigate this risk is to implement rate limiting and abuse protection at the infrastructure or Web Application Firewall (WAF) layer. This approach allows thresholds to be tuned for each environment’s expected usage and scaling characteristics. Some examples of controls can be:
+
+* Configuring a Web Application Firewall or API Gateway to enforce rate limits on sensitive operations, such as cluster creation and
+provisioning.
+* Defining thresholds based on baseline workload expectations (e.g., max requests per minute per client).
+* Monitoring logs and alerting on anomalies to detect potential abuse.
+* Apply a resource quota, which is a Rancher feature that limits the resources available to a project or namespace.
+
+For more information, see:
+
+* xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc[Project Resource Quotas]
+* https://owasp.org/API-Security/editions/2023/en/0xa4-lack-of-resources-rate-limiting/[OWASP API Security Top 10 - API4:2019 - Lack of Resources & Rate Limiting]
+* https://cheatsheetseries.owasp.org/cheatsheets/Rate_Limiting_Cheat_Sheet.html[OWASP Cheat Sheet: Rate Limiting]
